Ponemos el vídeo que será el fondo de nuestra primera pantalla

--- a/index.html
+++ b/index.html
@@ -3,22 +3,30 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<!-- Fuente -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600" rel="stylesheet"> 
+	<!--  CSS reutilizable  -->
+	<link rel="stylesheet" type="text/css" href="css/common.css">
+	<!--  CSS del proyecto  -->
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+	<header>
+		<video src="assets/hero-video.mp4" autoplay loop>
+	</header>
 	<!-- Menú -->
 	<nav>
 		<ul>
-			<li><a href="#nowhere" title="Lorum ipsum dolor sit amet">Lorem</a></li>
-			<li><a href="#nowhere" title="Aliquam tincidunt mauris eu risus">Aliquam</a></li>
-			<li><a href="#nowhere" title="Morbi in sem quis dui placerat ornare">Morbi</a></li>
-			<li><a href="#nowhere" title="Praesent dapibus, neque id cursus faucibus">Praesent</a></li>
-			<li><a href="#nowhere" title="Pellentesque fermentum dolor">Pellentesque</a></li>
+			<li><a href="#" title="Lorum ipsum dolor sit amet">Drive</a></li>
+			<li><a href="#" title="Aliquam tincidunt mauris eu risus">Explore</a></li>
+			<li><a href="#" title="Morbi in sem quis dui placerat ornare">Help</a></li>
+			<li><a href="" title="Praesent dapibus, neque id cursus faucibus">Praesent</a></li>
+			<li><a href="#" title="Pellentesque fermentum dolor">Log in</a></li>
 		</ul>
 	</nav>
 	<!-- Registro -->
 	<header>
-		
+		<video src="assets/hero-video.mp4" autoplay loop >
 	</header>
 	
 
