Creamos el menú

--- a/index.html
+++ b/index.html
@@ -15,19 +15,28 @@
 		<video src="assets/hero-video.mp4" autoplay loop>
 	</header>
 	<!-- Menú -->
-	<nav>
+	<nav id="menu" class="flex-container">
+	<!-- Logo -->
+		<div class="logo flex-container">
+			<img src="assets/logo-white.png" alt="lift logo blanco">
+		</div>
+	<!-- Links del menú -->
+	<div class="menu flex-container">
 		<ul>
-			<li><a href="#" title="Lorum ipsum dolor sit amet">Drive</a></li>
-			<li><a href="#" title="Aliquam tincidunt mauris eu risus">Explore</a></li>
-			<li><a href="#" title="Morbi in sem quis dui placerat ornare">Help</a></li>
-			<li><a href="" title="Praesent dapibus, neque id cursus faucibus">Praesent</a></li>
-			<li><a href="#" title="Pellentesque fermentum dolor">Log in</a></li>
+			<li><a href="#" >Drive</a></li>
+			<li><a href="#" >Explore</a></li>
+			<li><a href="#" >Help</a></li>
+			<li><a href="#" >Present</a></li>
+			<li><a href="#" >Log in</a></li>
 		</ul>
+		</div>
 	</nav>
 	<!-- Registro -->
-	<header>
-		<video src="assets/hero-video.mp4" autoplay loop >
-	</header>
+	<section>
+		
+	</section>
+
+
 	
 
 	<!-- Links -->
