Modificamos el nav usando las cajas flexibles en css

--- a/index.html
+++ b/index.html
@@ -11,26 +11,24 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<header>
-		<video src="assets/hero-video.mp4" autoplay loop>
-	</header>
 	<!-- Menú -->
 	<nav id="menu" class="flex-container">
 	<!-- Logo -->
-		<div class="logo flex-container">
-			<img src="assets/logo-white.png" alt="lift logo blanco">
+		<div class="cont-logo flex-container">
+			<img src="assets/logo-white.png" alt="lift logo blanco" class="logo ">
 		</div>
 	<!-- Links del menú -->
-	<div class="menu flex-container">
-		<ul>
-			<li><a href="#" >Drive</a></li>
-			<li><a href="#" >Explore</a></li>
-			<li><a href="#" >Help</a></li>
-			<li><a href="#" >Present</a></li>
-			<li><a href="#" >Log in</a></li>
-		</ul>
+		<div class="menu flex-container">
+			<div><a href="#" >Drive</a></div>
+			<div><a href="#" >Explore</a></div>
+			<div><a href="#" >Help</a></div>
+			<div><a href="#" >Present</a></div>
+			<div><a href="#" >Log in</a></div>
 		</div>
 	</nav>
+	<div>
+		<video src="assets/hero-video.mp4" autoplay loop>
+	</div>
 	<!-- Registro -->
 	<section>
 		
