Ajustamos medidas y creamos un div en nuestro div class menu que estará oculto

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			<div><a href="#" >Drive</a></div>
 			<div><a href="#" >Explore</a></div>
 			<div><a href="#" >Help</a></div>
-			<div><a href="#" >Present</a></div>
-			<div><a href="#" >Log in</a></div>
+			<div><a class="boton-login" href="#" >Log in</a></div>
+			<div><a class="boton-signup" href="#" >Sign up</a></div>
 		</div>
 	</nav>
 	<div>
