Agregamos clases y elementos que usaremos para cambiar el nav

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 </head>
 <body>
 	<!-- Menú -->
-	<nav id="menu" class="flex-container">
+	<nav class="cont-menu flex-container">
 	<!-- Logo -->
 		<div class="cont-logo flex-container">
 			<img src="assets/logo-white.png" alt="lift logo blanco" class="logo ">
 		</div>
 	<!-- Links del menú -->
 		<div class="menu flex-container">
-			<div><a href="#" >Drive</a></div>
-			<div><a href="#" >Explore</a></div>
-			<div><a href="#" >Help</a></div>
-			<div><a class="boton-login" href="#" >Log in</a></div>
-			<div><a class="boton-signup" href="#" >Sign up</a></div>
+			<div><a class="letra" href="#" >Drive</a></div>
+			<div><a class="letra" href="#" >Explore</a></div>
+			<div><a class="letra" href="#" >Help</a></div>
+			<div><a class="letra boton-login" href="#" >Log in</a></div>
+			<div><a class="letra boton-signup display-boton" href="#" >Sign up</a></div>
 		</div>
 	</nav>
 	<div>
