creamos en javascript la función para hacer visible nuestro menú blanco

--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
 			<div><a class="letra" href="#" >Explore</a></div>
 			<div><a class="letra" href="#" >Help</a></div>
 			<div><a class="letra boton-login" href="#" >Log in</a></div>
-			<div><a class="letra boton-signup display-boton" href="#" >Sign up</a></div>
+		</div>
+	</nav>
+		<!--    Menú 2    -->
+	<nav class="nav2 flex-container display-boton">
+	<!-- Logo 2-->
+		<div class="cont-logo flex-container">
+			<img src="assets/logo-pink.png" alt="lift logo rosado" class="logo ">
+		</div>
+	<!-- Links del menú -->
+		<div class="menu flex-container">
+			<div><a class="letra2" href="#" >Drive</a></div>
+			<div><a class="letra2" href="#" >Explore</a></div>
+			<div><a class="letra2" href="#" >Help</a></div>
+			<div><a class="letra2 boton-login" href="#" >Log in</a></div>
+			<div><a class="letra2 boton-signup" href="#" >Sign up</a></div>
 		</div>
 	</nav>
 	<div>
