Creamos nuestro footer y las propiedades de sus elementos, ademas al video le quitamos propiedades que interferían con el posicionamiento del footer.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
 	<!-- Menú -->
 	<nav class="cont-menu flex-container">
-	<!-- Logo -->
+		<!-- Logo -->
 		<div class="cont-logo flex-container">
 			<img src="assets/logo-white.png" alt="lift logo blanco" class="logo ">
 		</div>
-	<!-- Links del menú -->
+		<!-- Links del menú -->
 		<div class="menu flex-container">
 			<div><a class="letra" href="#" >Drive</a></div>
 			<div><a class="letra" href="#" >Explore</a></div>
@@ -25,13 +25,13 @@
 			<div><a class="letra boton-login" href="#" >Log in</a></div>
 		</div>
 	</nav>
-		<!--    Menú 2    -->
+	<!--    Menú 2    -->
 	<nav class="nav2 flex-container display-boton">
-	<!-- Logo 2-->
+		<!-- Logo 2-->
 		<div class="cont-logo flex-container">
 			<img src="assets/logo-pink.png" alt="lift logo rosado" class="logo ">
 		</div>
-	<!-- Links del menú -->
+		<!-- Links del menú -->
 		<div class="menu flex-container">
 			<div><a class="letra2" href="#" >Drive</a></div>
 			<div><a class="letra2" href="#" >Explore</a></div>
@@ -40,23 +40,51 @@
 			<div><a class="letra2 boton-signup" href="#" >Sign up</a></div>
 		</div>
 	</nav>
+	<!-- Video -->
 	<div>
 		<video src="assets/hero-video.mp4" autoplay loop>
 	</div>
-	<!-- Registro -->
-	<section>
-		
-	</section>
+		<!-- Registro -->
+		<section>
+
+		</section>
 
 
-	
 
-	<!-- Links -->
-	<footer>
-		
-	</footer>
 
-<!-- Enlace de javascript -->
-	<script type="text/javascript" src="js/app.js"></script>
-</body>
-</html>
+		<!-- Links -->
+		<footer class="flex-container">
+			<div class="links-container flex-container">
+				<div class="foot ">
+					<a class="letra title" href="">LOG IN</a>
+					<a class="letra" href="">Help</a>
+					<a class="letra" href="">Cities</a>
+					<a class="letra" href="">Airports</a>
+					<a class="letra" href="">Fare Estimate</a>
+				</div>
+				<div class="foot">
+					<a class="letra title" href="">PARTNER</a>
+					<a class="letra" href="">Partnerships</a>
+					<a class="letra" href="">Enterprise</a>
+					<a class="letra" href="">Ambassadors</a>
+					<a class="letra" href="">Developers</a>
+				</div>
+				<div class="foot">
+					<a class="letra title" href="">LEARN</a>
+					<a class="letra" href="">Safety</a>
+					<a class="letra" href="">Blog</a>
+					<a class="letra" href="">Press</a>
+					<a class="letra" href="">Careers</a>
+				</div>
+				<div class="foot cont-images ">
+				<img class="images" src="assets/apple-store.svg" alt="placeholder+image">
+				<img class="images" src="assets/google-play.png" alt="Google Play Link">
+				<img class="images" src="assets/microsoft.png" alt="Microsoft Link">
+				</div>
+			</div>
+		</footer>
+
+		<!-- Enlace de javascript -->
+		<script type="text/javascript" src="js/app.js"></script>
+	</body>
+	</html>
