Ponemos los íconos

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<!-- Enlazo awesome fonts -->
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<!-- Fuente -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600" rel="stylesheet"> 
 	<!--  CSS reutilizable  -->
@@ -43,7 +45,7 @@
 	<!-- Video -->
 	<div>
 		<video src="assets/hero-video.mp4" autoplay loop>
-	</div>
+		</div>
 		<!-- Registro -->
 		<section>
 
@@ -53,7 +55,7 @@
 
 
 		<!-- Links -->
-		<footer class="flex-container">
+		<footer >
 			<div class="links-container flex-container">
 				<div class="foot ">
 					<a class="letra title" href="">LOG IN</a>
@@ -77,9 +79,21 @@
 					<a class="letra" href="">Careers</a>
 				</div>
 				<div class="foot cont-images ">
-				<img class="images" src="assets/apple-store.svg" alt="placeholder+image">
-				<img class="images" src="assets/google-play.png" alt="Google Play Link">
-				<img class="images" src="assets/microsoft.png" alt="Microsoft Link">
+					<img class="images" src="assets/apple-store.svg" alt="placeholder+image">
+					<img class="images" src="assets/google-play.png" alt="Google Play Link">
+					<img class="images" src="assets/microsoft.png" alt="Microsoft Link">
+				</div>
+			</div>
+			<div class="total-copy flex-container">
+				<div class="cont-copy flex-container">
+					<div class="iconos flex-container">
+						<i class="fa fa-facebook-square image" aria-hidden="true"></i>
+						<i class="fa fa-instagram" aria-hidden="true"></i>
+						<i class="fa fa-twitter-square" aria-hidden="true"></i>
+					</div>
+					<div class="copy">
+						<h5>© 2017 Lyft,Inc.TermsPrivacy</h5>
+					</div>
 				</div>
 			</div>
 		</footer>
